<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lab4.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="4dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/S1"
            tools:textSize="24sp" />

        <TextView
            android:id="@+id/aX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/X" />

        <TextView
            android:id="@+id/aY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Y" />

        <TextView
            android:id="@+id/aZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Z" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/S2"
            tools:textSize="24sp" />

        <TextView
            android:id="@+id/mX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/X" />

        <TextView
            android:id="@+id/mY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Y" />

        <TextView
            android:id="@+id/mZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Z" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/S3"
            tools:textSize="24sp" />

        <TextView
            android:id="@+id/proximity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/S3" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/S4"
            tools:textSize="24sp" />

        <TextView
            android:id="@+id/light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/S4" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="-5dp"
        android:layout_marginTop="8dp"
        android:onClick="GoToIZ"
        android:text="Lab4 индивидуальное задание"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />

</android.support.constraint.ConstraintLayout>
